Preserve if-modified-since timestamps across redirects.

PR:		224426
MFC after:	1 week